--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ ansible-base==2.10.17
     # via ansible
 ansible==2.10.7
     # via -r requirements.in
+argcomplete==2.0.0
+    # via yq
 attrs==21.4.0
     # via jsonschema
 bcrypt==3.2.0
@@ -48,7 +50,9 @@ humanize==2.4.0
 idna==3.3
     # via requests
 importlib-metadata==4.8.3
-    # via jsonschema
+    # via
+    #   argcomplete
+    #   jsonschema
 invoke==1.7.1
     # via fabric
 jinja2==3.0.3
@@ -84,6 +88,7 @@ pyyaml==5.4.1
     #   -r requirements.in
     #   ansible-base
     #   docker-compose
+    #   yq
 requests==2.27.1
     # via
     #   -r requirements.in
@@ -100,6 +105,8 @@ six==1.16.0
     #   websocket-client
 texttable==1.6.4
     # via docker-compose
+toml==0.10.2
+    # via yq
 typing-extensions==4.1.1
     # via importlib-metadata
 urllib3==1.26.3
@@ -110,6 +117,10 @@ websocket-client==0.59.0
     # via
     #   docker
     #   docker-compose
+xmltodict==0.13.0
+    # via yq
+yq==3.1.0
+    # via -r requirements.in
 zipp==3.6.0
     # via importlib-metadata
 
